tests/baselines/reference/undeclaredModuleError.errors.txt
tests/cases/compiler/undeclaredModuleError.ts(1,21): error TS2307: Cannot find module 'fs'.
tests/cases/compiler/undeclaredModuleError.ts(8,29): error TS2345: Argument of type '() => 无值' is not assignable to parameter of type '(stat: 任意, name: 文字) => 真假'.
  Type '无值' is not assignable to type '真假'.
tests/cases/compiler/undeclaredModuleError.ts(11,41): error TS2304: Cannot find name 'IDoNotExist'.


==== tests/cases/compiler/undeclaredModuleError.ts (3 errors) ====
    import fs = require('fs');
                        ~~~~
!!! error TS2307: Cannot find module 'fs'.
    function readdir(path: string, accept: (stat: fs.Stats, name: string) => boolean, callback: (error: Error, results: { name: string; stat: fs.Stats; }[]) => void ) {}
    
    function join(...paths: string[]) {}
    
    function instrumentFile(covFileDir: string, covFileName: string, originalFilePath: string) {
        fs.readFile(originalFilePath, () => {       
            readdir(covFileDir, () => {
                                ~~~~~~~
!!! error TS2345: Argument of type '() => 无值' is not assignable to parameter of type '(stat: 任意, name: 文字) => 真假'.
!!! error TS2345:   Type '无值' is not assignable to type '真假'.
            } , (error: Error, files: {}[]) => {
                    files.forEach((file) => {
                        var fullPath = join(IDoNotExist);
                                            ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'IDoNotExist'.
                    } );
                } );
        } );
    }